src/tests/cases/snapshots/excise__tests__cases__ui__enter_folder-2.snap
---
source: src/tests/cases/ui.rs
expression: normalized
---
 EXCISE  /tmp/excise_tests/enter_folder  ◆ COMPLETE                                                                                                                                           
 allocated ##.#K   reclaim ##.#K   apparent 16.0K   4 entries                                                                                                                                 
──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
┌ STORAGE MAP ───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐┌ INSPECT ─────────────────────────┐
│┌─────────────────────────────────────────────────────────────────────────────────────────────────────────────────┬─────────────────────────────────────┤│subfolder1                        │
││█████████████████████████████████████████████████████████████████████████████████████████████████████████████████│                                     ││◆ COMPLETE · directory            │
││█████████████████████████████████████████████████████████████████████████████████████████████████████████████████│                                     ││allocated #.#K                    │
││█████████████████████████████████████████████████████████████████████████████████████████████████████████████████│                                     ││reclaim   #.#K                    │
││█████████████████████████████████████████████████████████████████████████████████████████████████████████████████│                                     ││apparent 8.0K · entries 1         │
││█████████████████████████████████████████████████████████████████████████████████████████████████████████████████│                                     ││identity  Inode[...]ber: ######## │
││█████████████████████████████████████████████████████████████████████████████████████████████████████████████████│                                     ││}                                 │
││█████████████████████████████████████████████████████████████████████████████████████████████████████████████████│                                     ││links     3 · s[...]              │
││█████████████████████████████████████████████████████████████████████████████████████████████████████████████████│                                     ││materialized                      │
││█████████████████████████████████████████████████████████████████████████████████████████████████████████████████│                                     ││                                  │
││█████████████████████████████████████████████████████████████████████████████████████████████████████████████████│                                     ││                                  │
││█████████████████████████████████████████████████████████████████████████████████████████████████████████████████│                                     ││                                  │
││█████████████████████████████████████████████████████████████████████████████████████████████████████████████████│                                     ││                                  │
││██████████████████████████████████████████subfolder1/ (+1 descendants)███████████████████████████████████████████│                                     ││                                  │
││█████████████████████████████████████████████████████████████████████████████████████████████████████████████████│                                     ││                                  │
││█████████████████████████████████████████████████████████████████████████████████████████████████████████████████│                                     ││                                  │
││███████████████████████████████████████████████████8.0K (50%)████████████████████████████████████████████████████│                                     ││                                  │
││█████████████████████████████████████████████████████████████████████████████████████████████████████████████████│                                     ││                                  │
││█████████████████████████████████████████████████████████████████████████████████████████████████████████████████│                                     ││                                  │
││█████████████████████████████████████████████████████████████████████████████████████████████████████████████████│                                     ││                                  │
││█████████████████████████████████████████████████████████████████████████████████████████████████████████████████│                file3                ││                                  │
││█████████████████████████████████████████████████████████████████████████████████████████████████████████████████│                                     ││                                  │
││█████████████████████████████████████████████████████████████████████████████████████████████████████████████████│                                     ││                                  │
││█████████████████████████████████████████████████████████████████████████████████████████████████████████████████│             4.0K (25%)              ││                                  │
││█████████████████████████████████████████████████████████████████████████████████████████████████████████████████│                                     ││                                  │
││█████████████████████████████████████████████████████████████████████████████████████████████████████████████████│                                     ││                                  │
││█████████████████████████████████████████████████████████████████████████████████████████████████████████████████│                                     ││                                  │
││█████████████████████████████████████████████████████████████████████████████████████████████████████████████████│                                     ││                                  │
││█████████████████████████████████████████████████████████████████████████████████████████████████████████████████│                                     ││                                  │
│├─────────────────────────────────────────────────────────────────────────────────────────────────────────────────┤                                     ││                                  │
││                                                                                                                 │                                     ││                                  │
││                                                                                                                 │                                     ││                                  │
││                                                                                                                 │                                     ││                                  │
││                                                                                                                 │                                     ││                                  │
││                                                                                                                 │                                     ││                                  │
││                                                      file2                                                      │                                     ││                                  │
││                                                                                                                 │                                     ││                                  │
││                                                   4.0K (25%)                                                    │                                     ││                                  │
││                                                                                                                 │                                     ││                                  │
││                                                                                                                 │                                     ││                                  │
││                                                                                                                 │                                     ││                                  │
││                                                                                                                 │                                     ││                                  │
││                                                                                                                 │                                     ││                                  │
└┴─────────────────────────────────────────────────────────────────────────────────────────────────────────────────┴─────────────────────────────────────┘└──────────────────────────────────┘
 / filter  arrows/Vim move  Enter open/rescan  Backspace delete  ? help  mem 96.0M/384.0M                                                                                                     
Excise · REDUCED MOTION
